--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,31 +32,72 @@ android {
 
 dependencies {
     def lifecycle_version = "2.2.0-rc01"
+    def constraint_layout_version = "1.1.3"
+    def core_ktx_version = "1.1.0"
+    def appcompat_version = "1.1.0"
+    def dexter_version = "5.0.0"
+    def progress_ring_version = "1.2.1"
+    def kenburnsview_version = "1.0.7"
+    def segment_button_version = "1.0.6"
+    def material_and_legacy_version = "1.0.0"
+    def step_view_version = "1.5.0"
+    def circle_image_version = "3.0.0"
+    def room_version = "2.2.1"
+    def coroutines_version = "1.3.0"
+    def rxjava_version = "2.2.6"
+    def rxandroid_version = "2.1.1"
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //Test const
+    def junit_version = "4.12"
+    def test_runner_version = "1.2.0"
+    def espresso_version = "3.2.0"
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
-    implementation 'com.karumi:dexter:5.0.0'
-    implementation 'com.flaviofaria:kenburnsview:1.0.7'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.github.flepsik:progress-ring-view:1.2.1'
-    implementation 'info.hoang8f:android-segmented:1.0.6'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.shuhart.stepview:stepview:1.5.0'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation 'joda-time:joda-time:2.10.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+
+    //Button navigation
+    implementation "com.etebarian:meow-bottom-navigation:1.0.4"
+
+    //Easy permission check
+    implementation "com.karumi:dexter:$dexter_version"
+
+    //Background moved image
+    implementation "com.flaviofaria:kenburnsview:$kenburnsview_version"
+
+    //Legacy support
+    implementation "androidx.legacy:legacy-support-v4:$material_and_legacy_version"
+
+    //Progress ring
+    implementation "com.github.flepsik:progress-ring-view:$progress_ring_version"
+
+    //Switch button
+    implementation "info.hoang8f:android-segmented:$segment_button_version"
+
+    //Material Design support
+    implementation "com.google.android.material:material:$material_and_legacy_version"
+
+    //StepView
+    implementation "com.shuhart.stepview:stepview:$step_view_version"
+
+    //circleImage
+    implementation "de.hdodenhof:circleimageview:$circle_image_version"
+
+    //Joda time
+    implementation "joda-time:joda-time:2.10.3"
+
+    //Test implementations
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test:runner:$test_runner_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     // Room components
-    implementation "androidx.room:room-runtime:2.2.1"
-    implementation "androidx.room:room-ktx:2.2.1"
-    kapt "androidx.room:room-compiler:2.2.1"
-    androidTestImplementation "androidx.room:room-testing:2.2.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
@@ -66,10 +107,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     // Coroutines
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
 }
