--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     def coroutines_version = "1.3.0"
     def rxjava_version = "2.2.6"
     def rxandroid_version = "2.1.1"
+    def yoda_time_version = "2.10.3"
 
     //Test const
     def junit_version = "4.12"
@@ -57,9 +58,6 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
-
-    //Button navigation
-    implementation "com.etebarian:meow-bottom-navigation:1.0.4"
 
     //Easy permission check
     implementation "com.karumi:dexter:$dexter_version"
@@ -86,9 +84,10 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$circle_image_version"
 
     //Joda time
-    implementation "joda-time:joda-time:2.10.3"
+    implementation "joda-time:joda-time:$yoda_time_version"
 
     //Test implementations
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test:runner:$test_runner_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
