--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,17 +31,17 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.2.0-rc01"
+    def lifecycle_version = '2.2.0-rc02'
     def constraint_layout_version = "1.1.3"
-    def core_ktx_version = "1.1.0"
+    def core_ktx_version = '1.1.0'
     def appcompat_version = "1.1.0"
-    def dexter_version = "5.0.0"
-    def progress_ring_version = "1.2.1"
+    def dexter_version = '6.0.0'
+    def progress_version = "1.0.2"
     def kenburnsview_version = "1.0.7"
     def segment_button_version = "1.0.6"
     def material_and_legacy_version = "1.0.0"
     def step_view_version = "1.5.0"
-    def circle_image_version = "3.0.0"
+    def circle_image_version = '3.0.1'
     def room_version = "2.2.1"
     def coroutines_version = "1.3.0"
     def rxjava_version = "2.2.6"
@@ -68,9 +68,6 @@ dependencies {
     //Legacy support
     implementation "androidx.legacy:legacy-support-v4:$material_and_legacy_version"
 
-    //Progress ring
-    implementation "com.github.flepsik:progress-ring-view:$progress_ring_version"
-
     //Switch button
     implementation "info.hoang8f:android-segmented:$segment_button_version"
 
@@ -82,6 +79,11 @@ dependencies {
 
     //circleImage
     implementation "de.hdodenhof:circleimageview:$circle_image_version"
+
+    //ProgressBar
+    implementation "com.params.progressview:step-progress:${progress_version}"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     //Joda time
     implementation "joda-time:joda-time:$yoda_time_version"
