Refactored project settings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 2    9
     defaultConfig {
         applicationId "army.com.dmbtimer"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -31,22 +31,28 @@ android {
 }
 
 dependencies {
+    //Android support
     def lifecycle_version = '2.2.0-rc02'
     def constraint_layout_version = "1.1.3"
     def core_ktx_version = '1.1.0'
     def appcompat_version = "1.1.0"
-    def dexter_version = '6.0.0'
-    def progress_version = "1.0.2"
-    def kenburnsview_version = "1.0.7"
-    def segment_button_version = "1.0.6"
     def material_and_legacy_version = "1.0.0"
-    def step_view_version = "1.5.0"
-    def circle_image_version = '3.0.1'
-    def room_version = "2.2.1"
+    def room_version = "2.2.2"
     def coroutines_version = "1.3.0"
+
+    //Utils
     def rxjava_version = "2.2.6"
     def rxandroid_version = "2.1.1"
     def yoda_time_version = "2.10.3"
+    def dexter_version = '6.0.0'
+
+    //UI
+    def step_view_version = "1.5.0"
+    def kenburnsview_version = "1.0.7"
+    def calendar_version = "1.7.0"
+    def segment_button_version = "1.0.6"
+    def circle_image_version = '3.0.1'
+    def progress_version = "1.0.2"
 
     //Test const
     def junit_version = "4.12"
@@ -79,6 +85,9 @@ dependencies {
 
     //circleImage
     implementation "de.hdodenhof:circleimageview:$circle_image_version"
+
+    //Calendar
+    implementation "com.applandeo:material-calendar-view:$calendar_version"
 
     //ProgressBar
     implementation "com.params.progressview:step-progress:${progress_version}"
